Remove unbabel and added MS Translator. Added where to weather.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "botbuilder": "^3.2.3",
+    "mstranslator": "^2.0.8",
     "request": "^2.75.0",
     "restify": "^4.1.1"
   }
