Havemus XML2json tv schedule

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "botbuilder": "^3.2.3",
     "mstranslator": "^2.0.8",
     "request": "^2.75.0",
-    "restify": "^4.1.1"
+    "restify": "^4.1.1",
+    "xml2json": "^0.10.0"
   }
 }
